# sesamo

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
resources/: jet_brains_mono_regular.hpp
src/: Application.cpp  Application.hpp  Common.hpp  Serial.cpp  Serial.hpp  main.cpp
